cmake_minimum_required(VERSION 3.14)

project(cpp-examples)

add_subdirectory(asynchronify)
add_subdirectory(class-templ-arg-deduction)
add_subdirectory(constexpr-if)
add_subdirectory(digit-separators)
add_subdirectory(hello-googletest)
add_subdirectory(next-bigger)
add_subdirectory(parallel-sort)
add_subdirectory(performance-test)
add_subdirectory(reverse-iterators)
add_subdirectory(ring-buffer)
add_subdirectory(structured-bindings)
add_subdirectory(tree-traversal)
add_subdirectory(tree-traversal-v2)
add_subdirectory(variable-arguments)
add_subdirectory(mutexes)
add_subdirectory(substring-search)
add_subdirectory(string-construction)

enable_testing()
add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
set(CMAKE_CTEST_COMMAND ctest --verbose)
